--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,22 @@
+.holder{
+	display:flex;
+	justify-content:space-between;
+}
 
-/* Your CSS Code here. */
+.item{
+	width:50px;
+	height:50px;
+}
+
+.green{
+	background-color:green;
+}
+
+.red{
+	background-color:red;
+}
+
+.blue{
+	background-color:blue;
+}
+
